--- a/public/plantillas/homeProductos.hbs
+++ b/public/plantillas/homeProductos.hbs
@@ -10,12 +10,18 @@
     <h2>Productos</h2>
     <div class="container mt-5 w-50 d-flex justify-content-around">
             {{#each productos}}
-                <form action="carrito/{{this.id}}" method="post">
-                    <div class="card" style="width: 18rem;">
-                        <img  src="{{this.tumbnail}}" alt="Card image cap">
+                <form action="carrito/{{this.id}}/add" method="post" style="padding:5px;">
+                    <div class="card" style="width: 18rem; height:22rem;">
+                        <img  src={{this.thumbnail}} alt="Card image cap" style="object-fit:contain; overflow:hidden;">
                         <div class="card-body">
                             <h5 class="card-title">{{this.title}}</h5>
                             <h6 class="card-price">${{this.price}}</h6>
+                            <select class="form-select form-select-sm mb-1 w-50" name="cantidad" aria-label="Cantidad">
+                                <option value="1" selected>1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
                             <button id="buttonAdd" type="submit" class="btn btn-success my-2 my-sm-0"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24"> <path fill="white" d="M11.05 8.9V5.9H8.05V3.9H11.05V0.9H13.05V3.9H16.05V5.9H13.05V8.9ZM7 22.1Q6.175 22.1 5.588 21.513Q5 20.925 5 20.1Q5 19.275 5.588 18.688Q6.175 18.1 7 18.1Q7.825 18.1 8.412 18.688Q9 19.275 9 20.1Q9 20.925 8.412 21.513Q7.825 22.1 7 22.1ZM17 22.1Q16.175 22.1 15.588 21.513Q15 20.925 15 20.1Q15 19.275 15.588 18.688Q16.175 18.1 17 18.1Q17.825 18.1 18.413 18.688Q19 19.275 19 20.1Q19 20.925 18.413 21.513Q17.825 22.1 17 22.1ZM7 17.1Q5.8 17.1 5.188 16.062Q4.575 15.025 5.175 14L6.5 11.6L2.95 4.1H0.9V1.9H4.325L8.525 10.825H15.55L19.375 3.9L21.275 4.95L17.425 11.9Q17.15 12.425 16.675 12.712Q16.2 13 15.6 13H8.2L7.15 14.9Q7.15 14.9 7.15 14.9Q7.15 14.9 7.15 14.9H19.1V17.1Z" /></svg></button>
                         </div>
                     </div>
