--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -1,15 +1,15 @@
 <%- include("partials/head") %>
 <body id="body">
     <%- include("partials/navbar") %>
-    <div class="container mt-3 w-50">
+    <div class="container mt-3 mb-5">
         <div class="jumbotron">
             <h1>Carrito</h1>
             <br>
         </div>
         <div class="container mt-3">
-            <div class="jumbotron">
-            <div id="productosCarrito"><h3>Cargando...</h3></div>
-            </div>
+
+            <div id="listaProductosCarritos"><h3>Cargando...</h3></div>
+
         </div>
     </div>
 
