refresh done, quantity done

--- a/public/plantillas/carritoProductos.hbs
+++ b/public/plantillas/carritoProductos.hbs
@@ -10,7 +10,8 @@
                             <img  src={{this.thumbnail}} alt="Card image cap" style="object-fit:contain; overflow:hidden;">
                             <div class="card-body">
                                 <h5 class="card-title">{{this.title}}</h5>
-                                <h6 class="card-price">${{this.price}}</h6>
+                                <h6 class="card-price">Precio: ${{this.price}}</h6>
+                                <h6 class="card-price">Cantidad: <b>{{this.cantidad}}</b></h6>
                             </div>
                         </div>
                     </form>
