--- a/public/plantillas/mensajes.hbs
+++ b/public/plantillas/mensajes.hbs
@@ -1,12 +1,16 @@
 {{#if mensajes}}
-{{#each mensajes}}
-<div class="message-item">
-    <span>
+  {{#each mensajes}}
+    <div class="message-item">
+      <span>
         [<span class="date">{{this.fyh}}</span>]:
-    </span>
-    <span class="avatar"><img src="{{this.autor.avatar}}" width=50 alt=""></span>
-    <span class="author" style="color: blue">{{this.autor.id}}:</span>
-    <span class="message">{{this.texto}}</span>
-</div>
-{{/each}}
+      </span>
+      <span class="avatar"><img
+          src="{{this.autor.avatar}}"
+          width="50"
+          alt=""
+        /></span>
+      <span class="author" style="color: blue">{{this.autor.id}}:</span>
+      <span class="message">{{this.texto}}</span>
+    </div>
+  {{/each}}
 {{/if}}
